checked alt attribute on every image. also fixed better ccontrast on h1 in ordervalidation and comingsoon

--- a/css/cart.css
+++ b/css/cart.css
@@ -36,7 +36,6 @@ input {
     font-size: 16px;
 }
 
-
 .button {
     background-color: var(--SECONDARY-COLOR-ONE);
     color: var(--NEUTRAL-ONE);
@@ -94,6 +93,12 @@ nav .active {
     padding: 0.850rem;
     color: var(--NEUTRAL-TWO);
     font-weight: 600;
+}
+
+.cart-summary {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 @media (max-width: 768px) {
